[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/levels/pixel/PixelDefender.gd" type="Script" id=1]
[ext_resource path="res://scenes/levels/pixel/spaceship.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]
position = Vector2( 640, 360 )
script = ExtResource( 1 )

[node name="BulletHolder" type="Node2D" parent="."]

[node name="spaceship" parent="." instance=ExtResource( 2 )]
position = Vector2( -432.818, -39.5735 )

[node name="Enemies" type="Node2D" parent="."]

[connection signal="area_shape_entered" from="spaceship" to="." method="_on_spaceship_area_shape_entered"]
